Bug 93451 - [hsw edp] Dell Chromebook 11, no backlight
Summary: [hsw edp] Dell Chromebook 11, no backlight
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P3 normal
Assignee: intel-gfx-bugs@lists.freedesktop.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-18 12:47 UTC by Owen Garland
Modified: 2018-01-20 15:15 UTC (History)
1 user (show)

See Also:
Kernel Version: 3.18.6-1-ARCH
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Dmesg output with drm.debug=14 (62.75 KB, text/plain)
2015-02-18 13:31 UTC, Owen Garland
Details
xrandr --verbose output (2.86 KB, text/plain)
2015-02-18 13:48 UTC, Owen Garland
Details
lspci -vmmnn -s 0:02 output (198 bytes, text/plain)
2015-02-18 13:50 UTC, Owen Garland
Details
drm/i915: Dell Chromebook 11 has pwm backlight (1.03 KB, patch)
2015-02-18 16:18 UTC, Jani Nikula
Details | Diff

Description Owen Garland 2015-02-18 12:47:42 UTC
There are no files in the /sys/class/backlight directory and no apparent way to set the backlight for the Dell Chrombook 11. Another user posted a detailed summary here:

http://askubuntu.com/questions/577539/dell-chromebook-11-unable-to-set-backlight-and-sys-class-backlight-folder-is

I couldn't find a bug report here, so I added one myself.
Comment 1 Jani Nikula 2015-02-18 13:13:53 UTC
Please add drm.debug=14 module parameter and attach dmesg all the way from boot. Please also attach /sys/kernel/debug/dri/0/i915_opregion.
Comment 2 Owen Garland 2015-02-18 13:31:50 UTC
Created attachment 167441 [details]
Dmesg output with drm.debug=14

Dmesg output from Dell Chromebook 11 with drm.debug=14 kernel parameter
Comment 3 Owen Garland 2015-02-18 13:32:53 UTC
"/sys/kernel/debug/dri/0/i915_opregion" is empty. Sorry for two comments.
Comment 4 Jani Nikula 2015-02-18 13:38:31 UTC
(In reply to Owen Garland from comment #3)
> "/sys/kernel/debug/dri/0/i915_opregion" is empty. Sorry for two comments.

It's a special file, ls -l would report its size to be 0. Did you try to copy it?
Comment 5 Jani Nikula 2015-02-18 13:44:47 UTC
Okay, the chromebook may need a quirk to enable backlight, *sigh*.

Where do you infer that "screen detected as CRT"? What does xrandr say?
Comment 6 Jani Nikula 2015-02-18 13:46:24 UTC
Also please provide output of 'lspci -vmmnn -s 0:02'.
Comment 7 Owen Garland 2015-02-18 13:48:53 UTC
Created attachment 167451 [details]
xrandr --verbose output

(In reply to Jani Nikula from comment #4)
> (In reply to Owen Garland from comment #3)
> > "/sys/kernel/debug/dri/0/i915_opregion" is empty. Sorry for two comments.
> 
> It's a special file, ls -l would report its size to be 0. Did you try to
> copy it?

I tried to cat it, the file is definitely empty ls -l confirms this. 

(In reply to Jani Nikula from comment #5)
> Okay, the chromebook may need a quirk to enable backlight, *sigh*.
> 
> Where do you infer that "screen detected as CRT"? What does xrandr say?

I've attached xrandr.txt that contains the output of xrandr --verbose, I think that is where I got the notion that it is a CRT.
Comment 8 Owen Garland 2015-02-18 13:50:02 UTC
Created attachment 167461 [details]
lspci -vmmnn -s 0:02 output

Added lspci output.
Comment 9 Jani Nikula 2015-02-18 16:18:41 UTC
Created attachment 167481 [details]
drm/i915: Dell Chromebook 11 has pwm backlight

Please try this patch.
Comment 10 Owen Garland 2015-02-18 18:56:42 UTC
That did the trick. Thank you so much, hopefully one day I can fix things myself!
Comment 11 Jani Nikula 2015-02-24 08:51:42 UTC
Fixed by

commit cf6f0af9fbdd90b81af14fa6375387131cd8adf1
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Thu Feb 19 10:53:39 2015 +0200

    drm/i915: Dell Chromebook 11 has PWM backlight

in drm-intel-fixes. Thanks for the report and testing.
Comment 12 richard mcdonald 2018-01-20 15:15:38 UTC
Comment on attachment 167481 [details]
drm/i915: Dell Chromebook 11 has pwm backlight

>From cbaeb2136f02fb87ec89c1bf947d0114d2326c80 Mon Sep 17 00:00:00 2001
>From: Jani Nikula <jani.nikula@intel.com>
>Date: Wed, 18 Feb 2015 18:15:56 +0200
>Subject: [PATCH] drm/i915: Dell Chromebook 11 has pwm backlight
>Organization: Intel Finland Oy - BIC 0357606-4 - Westendinkatu 7, 02160 Espoo
>Cc: Jani Nikula <jani.nikula@intel.com>
>
>Add quirk for Dell Chromebook 11 backlight.
>
>Signed-off-by: Jani Nikula <jani.nikula@intel.com>
>---
> drivers/gpu/drm/i915/intel_display.c | 3 +++
> 1 file changed, 3 insertions(+)
>
>diff --git a/drivers/gpu/drm/i915/intel_display.c
>b/drivers/gpu/drm/i915/intel_display.c
>index 3b0fe9f1f3c9..d630ce46298a 100644
>--- a/drivers/gpu/drm/i915/intel_display.c
>+++ b/drivers/gpu/drm/i915/intel_display.c
>@@ -13100,6 +13100,9 @@ static struct intel_quirk intel_quirks[] = {
> 
>       /* HP Chromebook 14 (Celeron 2955U) */
>       { 0x0a06, 0x103c, 0x21ed, quirk_backlight_present },
>+
>+      /* Dell Chromebook 11 */
>+      { 0x0a06, 0x1028, 0x0a35, quirk_backlight_present },
> };
> 
> static void intel_init_quirks(struct drm_device *dev)
>-- 
>2.1.4
>

Note You need to log in before you can comment on or make changes to this bug.